Assembler/tests/ok/just_in_range_hex.asm
LIL R10,0xFFFFFFFFFFFFFFFF
