Assembler/tests/bad/bad_binary.asm
LIL R10,z'00001111'
